# multicaster

./: .gitignore  Cargo.toml  README.md  config.toml
src/: communications.rs  config.rs  lib.rs  listener.rs  main.rs  mdns.rs  processor.rs  socket.rs
src/mdns/: mod.rs
src/parser/: error.rs  header.rs  mod.rs  qname.rs  question.rs  resource_record.rs
src/parser/rdata/: a.rs  aaaa.rs  cname.rs  https.rs  mod.rs  nsec.rs  ptr.rs  srv.rs  txt.rs
