[package]
name = "multicaster"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-parser = "0.8.0"
env_logger = "0.10.0"
get_if_addrs = "0.5.3"
log = "0.4.18"
net2 = "0.2.39"
network-interface = "1.0.1"
nix = "0.26.2"
once_cell = "1.17.2"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
