[package]
name = "multicaster"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-parser = "0.8.0"
endorphin = "0.1.9"
env_logger = "0.10.0"
get_if_addrs = "0.5.3"
libc = "0.2.147"
log = "0.4.18"
nix = { version = "0.26.2", features = ["net"] }
serde = { version = "1.0.163", features = ["derive"] }
socket2 = { version = "0.5.3", features = ["all"] }
toml = "0.7.4"
